test/scripted/compilation/errors/does_not_always_return.bnj
# test:subtest
# test:error 4:6 "function does not return a value in all control paths"

func test(a: i32) -> i32 {
    if a == 0 {
        return 42;
    }
}

# test:subtest
# test:error 13:6 "function does not return a value in all control paths"

func test(a: i32) -> i32 {
    if a == 0 {
        return 42;
    } else if a == 1 {
        return 0;
    }
}

# test:subtest
# test:compiles

func test(a: i32) -> i32 {
    if a == 0 {
        return 42;
    } else {
        return 0;
    }
}

# test:subtest
# test:compiles

func test(a: i32) -> i32 {
    if a == 0 {
        return 42;
    } else if a == 1 {
        return 0;
    } else {
        return 1;
    }
}

# test:subtest
# test:error 48:6 "function does not return a value in all control paths"

func test(a: i32, b: i32) -> i32 {
    if a == 0 {
        if b == 1 {
            return 42;
        }
    } else {
        return 1;
    }
}

# test:subtest
# test:compiles

func test(a: i32, b: i32) -> i32 {
    if a == 0 {
        if b == 1 {
            return 42;
        } else {
            return 0;
        }
    } else {
        return 1;
    }
}

# test:subtest
# test:error 76:6 "function does not return a value in all control paths"

func test(result: i32 except bool) -> i32 {
    try value in result {
        return value;
    }
}

# test:subtest
# test:compiles

func test(result: i32 except bool) -> i32 {
    try value in result {
        return value;
    } else {
        return 0;
    }
}